...
        child: Padding(
          padding: EdgeInsets.all(16.r),
          child: Column(
              crossAxisAlignment: CrossAxisAlignment.stretch,
              children: [
                _buildTextField(
                  key: const Key('rtNumberField'),
                  context: context,
                  controller: _rtNumberController,
                  label: 'Nomor RT',
                  icon: Icons.tag_rounded,
                  keyboardType: TextInputType.number,
                  validator: (value) =>
                  value!.isEmpty ? 'Nomor RT tidak boleh kosong' : null,
                ),
                SizedBox(height: 16.h),
                _buildTextField(
                  key: const Key('rtNameField'),
                  context: context,
                  controller: _rtNameController,
                  label: 'Nama Wilayah/Blok RT',
                  icon: Icons.maps_home_work_outlined,
                  validator: (value) =>
                  value!.isEmpty ? 'Nama Wilayah/Blok RT tidak boleh kosong' : null,
...
